{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 175,
  "lineage": "bc9fa35c-d612-e056-c64b-75378b29df5c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nginx-server-aws",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0583d8c7a9c35822c",
            "arn": "arn:aws:ec2:us-east-1:851725160993:instance/i-04a34ff05711a023c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a34ff05711a023c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx-server-aws-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3d00f4b47067f9f",
            "private_dns": "ip-172-31-32-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.127",
            "public_dns": "ec2-35-173-218-97.compute-1.amazonaws.com",
            "public_ip": "35.173.218.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04f9b36d2fc7710f6",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "server-aws-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed2bb7eb2ed8f1e5",
            "tags": {
              "Enviroment": "test",
              "Name": "EC2-nginx-server-aws",
              "Owner": "edinson.rodriguez@wom.co",
              "Project": "Laboratorio",
              "Team": "DevOps"
            },
            "tags_all": {
              "Enviroment": "test",
              "Name": "EC2-nginx-server-aws",
              "Owner": "edinson.rodriguez@wom.co",
              "Project": "Laboratorio",
              "Team": "DevOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbd941733455aaaf"
            ]
          },
          "dependencies": [
            "aws_key_pair.server-aws-ssh",
            "aws_security_group.server-aws-sg"
          ]
        },
        {
          "index_key": "vmserver01",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0583d8c7a9c35822c",
            "arn": "arn:aws:ec2:us-east-1:851725160993:instance/i-04814632375dcbf3a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04814632375dcbf3a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vmserver01-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02514c1220870f139",
            "private_dns": "ip-172-31-47-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.12",
            "public_dns": "ec2-54-226-104-213.compute-1.amazonaws.com",
            "public_ip": "54.226.104.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b9b5c968b674b6f",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "server-aws-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed2bb7eb2ed8f1e5",
            "tags": {
              "Enviroment": "test",
              "Name": "EC2-vmserver01",
              "Owner": "edinson.rodriguez@wom.co",
              "Project": "Laboratorio",
              "Team": "DevOps"
            },
            "tags_all": {
              "Enviroment": "test",
              "Name": "EC2-vmserver01",
              "Owner": "edinson.rodriguez@wom.co",
              "Project": "Laboratorio",
              "Team": "DevOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbd941733455aaaf"
            ]
          },
          "dependencies": [
            "aws_key_pair.server-aws-ssh",
            "aws_security_group.server-aws-sg"
          ]
        },
        {
          "index_key": "vmserver02",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0583d8c7a9c35822c",
            "arn": "arn:aws:ec2:us-east-1:851725160993:instance/i-07e0bc5d5fb328897",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e0bc5d5fb328897",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vmserver02-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6aeebab1af3391b",
            "private_dns": "ip-172-31-39-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.73",
            "public_dns": "ec2-54-198-57-127.compute-1.amazonaws.com",
            "public_ip": "54.198.57.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04a031f3a77239f34",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "server-aws-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed2bb7eb2ed8f1e5",
            "tags": {
              "Enviroment": "test",
              "Name": "EC2-vmserver02",
              "Owner": "edinson.rodriguez@wom.co",
              "Project": "Laboratorio",
              "Team": "DevOps"
            },
            "tags_all": {
              "Enviroment": "test",
              "Name": "EC2-vmserver02",
              "Owner": "edinson.rodriguez@wom.co",
              "Project": "Laboratorio",
              "Team": "DevOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbd941733455aaaf"
            ]
          },
          "dependencies": [
            "aws_key_pair.server-aws-ssh",
            "aws_security_group.server-aws-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-aws-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725160993:security-group/sg-0dbd941733455aaaf",
            "description": "Security group allowing SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbd941733455aaaf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "server-aws-sg",
            "name_prefix": "",
            "owner_id": "851725160993",
            "revoke_rules_on_delete": false,
            "tags": {
              "Enviroment": "test",
              "Name": "server-aws-sg",
              "Owner": "edinson.rodriguez@wom.co",
              "Project": "Laboratorio",
              "Team": "DevOps"
            },
            "tags_all": {
              "Enviroment": "test",
              "Name": "server-aws-sg",
              "Owner": "edinson.rodriguez@wom.co",
              "Project": "Laboratorio",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-082f5cb9bcef55423"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.terraform-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725160993:security-group/sg-0f22f52482cbc910f",
            "description": "SG para habilitar HTTP",
            "egress": [],
            "id": "sg-0f22f52482cbc910f",
            "ingress": [],
            "name": "http rule-20240726041433127500000005",
            "name_prefix": "http rule-",
            "owner_id": "851725160993",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http rule"
            },
            "tags_all": {
              "Name": "http rule"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09ebdc914ffa8484e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.terraform-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-548240773",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f22f52482cbc910f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-sg.aws_security_group.this",
            "module.terraform-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.terraform-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3297340265",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f22f52482cbc910f",
            "security_group_rule_id": "sgr-0788cb6e8cf855ce0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.terraform-sg.aws_security_group.this",
            "module.terraform-sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725160993:network-acl/acl-0b1cc8dfff8fe6230",
            "default_network_acl_id": "acl-0b1cc8dfff8fe6230",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b1cc8dfff8fe6230",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851725160993",
            "subnet_ids": [
              "subnet-0a39c949c5ff18e0d",
              "subnet-0c99784aaa4f8f098"
            ],
            "tags": {
              "Name": "darkmumin-terraform-vpc-default",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "tags_all": {
              "Name": "darkmumin-terraform-vpc-default",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "vpc_id": "vpc-09ebdc914ffa8484e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725160993:route-table/rtb-0f5494a2820003d40",
            "default_route_table_id": "rtb-0f5494a2820003d40",
            "id": "rtb-0f5494a2820003d40",
            "owner_id": "851725160993",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "darkmumin-terraform-vpc-default",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "tags_all": {
              "Name": "darkmumin-terraform-vpc-default",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09ebdc914ffa8484e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725160993:security-group/sg-0fc4a5b6de22194ab",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fc4a5b6de22194ab",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "851725160993",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darkmumin-terraform-vpc-default",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "tags_all": {
              "Name": "darkmumin-terraform-vpc-default",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "vpc_id": "vpc-09ebdc914ffa8484e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725160993:internet-gateway/igw-03ed9756bcaf770ed",
            "id": "igw-03ed9756bcaf770ed",
            "owner_id": "851725160993",
            "tags": {
              "Name": "darkmumin-terraform-vpc",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "tags_all": {
              "Name": "darkmumin-terraform-vpc",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "vpc_id": "vpc-09ebdc914ffa8484e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ed9756bcaf770ed",
            "id": "r-rtb-09a7b3a750aa372de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a7b3a750aa372de",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725160993:route-table/rtb-09a7b3a750aa372de",
            "id": "rtb-09a7b3a750aa372de",
            "owner_id": "851725160993",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "darkmumin-terraform-vpc-public",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "tags_all": {
              "Name": "darkmumin-terraform-vpc-public",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ebdc914ffa8484e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01347ce9f7e910b62",
            "route_table_id": "rtb-09a7b3a750aa372de",
            "subnet_id": "subnet-0c99784aaa4f8f098"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e70c21148e6c2b0",
            "route_table_id": "rtb-09a7b3a750aa372de",
            "subnet_id": "subnet-0a39c949c5ff18e0d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725160993:subnet/subnet-0c99784aaa4f8f098",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c99784aaa4f8f098",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725160993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darkmumin-terraform-vpc-public-us-east-1a",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "tags_all": {
              "Name": "darkmumin-terraform-vpc-public-us-east-1a",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "vpc_id": "vpc-09ebdc914ffa8484e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725160993:subnet/subnet-0a39c949c5ff18e0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a39c949c5ff18e0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725160993",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darkmumin-terraform-vpc-public-us-east-1b",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "tags_all": {
              "Name": "darkmumin-terraform-vpc-public-us-east-1b",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "vpc_id": "vpc-09ebdc914ffa8484e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725160993:vpc/vpc-09ebdc914ffa8484e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b1cc8dfff8fe6230",
            "default_route_table_id": "rtb-0f5494a2820003d40",
            "default_security_group_id": "sg-0fc4a5b6de22194ab",
            "dhcp_options_id": "dopt-08f67560532571865",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ebdc914ffa8484e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5494a2820003d40",
            "owner_id": "851725160993",
            "tags": {
              "Name": "darkmumin-terraform-vpc",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            },
            "tags_all": {
              "Name": "darkmumin-terraform-vpc",
              "Terraform": "verdadero",
              "enviroment": "desarrollo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}